--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -4,56 +4,26 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico"> 
     <meta charset="UTF-8">
-    <title>Flexbox Layout</title>
+    <title>Website</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
 <nav class="nav justify-content-center">
     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-    <a class="nav-link" href="about.html">About</a>
-    <a class="nav-link" href="gallery.html">Gallery</a>
   </nav>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-       
-        
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-<br>
-
-<div class="button-group">
-      <button class="button">Learn More</button>
-      <button class="button">Contact</button>
-
-    </div>
 
 <br>
-<h2 class="blog-title">Bird Photography</h2>
+
+
+
+<br>
+<h2 class="blog-title">Video Game Memory</h2>
 <br>
 <p class="blog-para">
-  This website will showcase a couple of photos of birds I have taken so far. It's always exciting to take good picture of them and edit it. :D
+ When I was little, my older sister discovered the game Sonic Adventure 2, I constidly watched her play the game and got hooked into the world of Sonic because he was my favorite color; Blue. 
+ Whenever I would play the first stage of the hero side (when Sonic is escaping from the police) I would always ask my sister to help with the end of the level that involved a scary giant semi truck chasing after you. 
+ I'm pretty sure my sister was annoyed with me asking everytime.
  
 </p>
