--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -1,29 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico"> 
-    <meta charset="UTF-8">
-    <title>Website</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-
-<body>
-<nav class="nav justify-content-center">
-    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-  </nav>
-
-
-<br>
-
-
-
-<br>
-<h2 class="blog-title">Video Game Memory</h2>
-<br>
-<p class="blog-para">
- When I was little, my older sister discovered the game Sonic Adventure 2, I constidly watched her play the game and got hooked into the world of Sonic because he was my favorite color; Blue. 
- Whenever I would play the first stage of the hero side (when Sonic is escaping from the police) I would always ask my sister to help with the end of the level that involved a scary giant semi truck chasing after you. 
- I'm pretty sure my sister was annoyed with me asking everytime.
- 
-</p>
+<html>
+  <head>
+    <title>My 441 Site</title>
+  </head>
+  <body>
+    <h1>My 441 Homework Site</h1>
+    <p>This site contains my work for MART 441.</p>
+  </body>
+</html>
