--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My 441 Site</title>
+    <title>My First Web Page</title>
+
+<style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #088da5;
+      margin: 20px;
+    }
+
+    h1 {
+      color: #edf3ff;
+    }
+
+    p {
+      color: #242323;
+    }
+  </style>
+
+    
   </head>
   <body>
-    <h1>My 441 Homework Site</h1>
-    <p>This site contains my work for MART 441.</p>
+
+    <h1>Welcome to My Page</h1>
+
+    <p>This is my first one-page website built with HTML.</p>
+
+<h2>About Me</h2>
+
+<p>I enjoy drawing traditanally and digitally. Creating characters and stories.</p>
+
+<h2>My Favorite Things</h2>
+
+<ul>
+  <li>Character Design</li>
+  <li>Dungeons and Dragons</li>
+  <li>Coffee</li>
+  <li>Magpies</li>
+</ul>
+
+<p>
+  Visit my favorite website:
+  <a href="https://www.example.com">Click here</a>
+</p>
+
+<img src="images/Black Billed Magpie.jpg" alt="Placeholder image">
+
+<br>
+
+<br>
+
+ <h1>Video Game Memory</h1>
+
+ <p>When I was little, my older sister discovered a game; Sonic Adventure 2. I began to watch her play the game and enjoy Sonic,
+  Mainly because he was blue, my favorite color. I soon got hooked into the game and its franchise. Everytime I would play the first level
+  where Sonic was escaping the police, I would always ask my sister for help at the end of the level. A big semi truck would jump out and chase you
+  and it always scared me. I'm sure it annoyed my sister a bit whenever I would ask for help but she'd do it everytime to which I'm thankful for.
+ </p>
+
+
+
   </body>
 </html>
