--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -29,7 +29,7 @@
 
 <h2>About Me</h2>
 
-<p>I enjoy drawing traditanally and digitally. Creating characters and stories.</p>
+<p>I enjoy drawing traditanally and digitally. Creating characters and stories. I also like to photograph birds when ever I get the chance.</p>
 
 <h2>My Favorite Things</h2>
 
